extends Control

onready var skill_slot0 = $HBoxContainer/Skill_Slot0
onready var skill_slot1 = $HBoxContainer/Skill_Slot1
onready var skill_slot2 = $HBoxContainer/Skill_Slot2
onready var skill_slot3 = $HBoxContainer/Skill_Slot3
onready var skill_slot4 = $HBoxContainer/Skill_Slot4
onready var skill_slot5 = $HBoxContainer/Skill_Slot5
onready var skill_slot6 = $HBoxContainer/Skill_Slot6
